--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <p class="">Взгляните на жизнь иначе!</p>
         <div class="download__item-download">
           <a class="download__item-button button" href="#">Скачать приложение</a>
-          <ul class="item-download__icon">
-            <li class="item-download__icon--ios"><span class="visually-hidden">Иконка ios</span></li>
-            <li class="item-download__icon--android"><span class="visually-hidden"></span></li>
-            <li class="item-download__icon--windows"><span class="visually-hidden"></span></li>
+          <ul class="download__item__icon">
+            <li class="download__item__icon--ios"><span class="visually-hidden">Иконка ios</span></li>
+            <li class="download__item__icon--android"><span class="visually-hidden"></span></li>
+            <li class="download__item__icon--windows"><span class="visually-hidden"></span></li>
           </ul>
           <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
