--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <h1 class="visually-hidden">Пинк – приложение для телефона</h1>
       <section class="download">
         <h2 class="visually-hidden">Загрузка приложения</h2>
-        <p class="">Взгляните на жизнь иначе!</p>
-        <div class="download__item-download">
-          <a class="download__item-button button" href="#">Скачать приложение</a>
-          <ul class="download__item__icon">
-            <li class="download__item__icon--ios"><span class="visually-hidden">Иконка ios</span></li>
-            <li class="download__item__icon--android"><span class="visually-hidden"></span></li>
-            <li class="download__item__icon--windows"><span class="visually-hidden"></span></li>
+        <p class="page-main__paragraf">Взгляните на жизнь иначе!</p>
+        <div class="page-main__item-download">
+          <a class="page-main__item-button button" href="#">Скачать приложение</a>
+          <ul class="page-main__item__icon">
+            <li class="page-main__item__icon--ios"><span class="visually-hidden">Иконка ios</span></li>
+            <li class="page-main__item__icon--android"><span class="visually-hidden"></span></li>
+            <li class="page-main__item__icon--windows"><span class="visually-hidden"></span></li>
           </ul>
           <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
@@ -134,13 +134,27 @@
             <p class="contacts__item">ул. Большая конюшенная, 19/8</p>
           </div>
           <div class="contacts__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1680.6059930518893!2d30.321269608937822!3d59.93896839959574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1585410296204!5m2!1sru!2sru" width="400" height="300" " allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1680.6059930518893!2d30.321269608937822!3d59.93896839959574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1585410296204!5m2!1sru!2sru" width="400" height="300" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
         </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <a class="page-footer__logo">
+          <!-- Логотип -->
+        </a>
+        <ul class="page-footer__social">
+          <li class="page-footer__social-twitter"></li>
+          <li class="page-footer__social-facebook"></li>
+          <li class="page-footer__social-youtube"></li>
+        </ul>
+        <div class="page-footer__autor">
+          <p class="page-footer__paragraf">Разработано</p>
+          <a class="page-footer__logo" href="#"></a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
