Добовляет иконки в блок загрузки приложения

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <a class="page-main__item-button button" href="#">Скачать приложение</a>
           <ul class="page-main__item__icon">
             <li class="page-main__item__icon--ios"><span class="visually-hidden">Иконка ios</span></li>
-            <li class="page-main__item__icon--android"><span class="visually-hidden"></span></li>
-            <li class="page-main__item__icon--windows"><span class="visually-hidden"></span></li>
+            <li class="page-main__item__icon--android"><span class="visually-hidden">Иконка Android</span></li>
+            <li class="page-main__item__icon--windows"><span class="visually-hidden">Иконка Windows</span></li>
           </ul>
           <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
