--- a/photo.html
+++ b/photo.html
@@ -14,13 +14,13 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a>Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фотографии</a>
+              <a>Фотографии</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Конкурс</a>
+              <a href="form.html">Конкурс</a>
             </li>
             <li class="site-list__item">
               <a href="#">Html Academy</a>
@@ -30,6 +30,77 @@
       </nav>
     </header>
     <main class="main-photo">
+      <section class="main-photo__gallery">
+        <h2 class="visually-hidden">Фотогалерея</h2>
+
+        <p>Взгляните на фотографии, которые выкладывают пользователи!
+          Видите, как не хватает ваших?
+        </p>
+
+        <ul class="main-photo__gallery__comment">
+          <li class="main-photo__gallery__item">
+            <img src="https://via.placeholder.com/320x137">
+            <h3 class="main-photo__gallery__autor">Анна</h3>
+            <p class="main-photo__gallery__post">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую
+              трансляцию вперескопе, задавайте свои вопросы!</p>
+            <button class="main-photo__gallery__like" type="button"><span class="visually-hidden">Сердечко</span></button>
+            <p class="main-photo__gallery__count">Нравится:</p>
+          </li>
+
+          <li class="main-photo__gallery__item">
+            <img src="https://via.placeholder.com/280x180">
+            <h3 class="main-photo__gallery__autor">Левон</h3>
+            <p class="main-photo__gallery__post">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+            <button class="main-photo__gallery__like" type="button"><span class="visually-hidden">Сердечко</span></button>
+            <p class="main-photo__gallery__count">Нравится:</p>
+          </li>
+
+          <li class="main-photo__gallery__item">
+            <img src="https://via.placeholder.com/280x180">
+            <h3 class="main-photo__gallery__autor">Антон</h3>
+            <p class="main-photo__gallery__post">Соседи будут рады!</p>
+            <button class="main-photo__gallery__like" type="button"><span class="visually-hidden">Сердечко</span></button>
+            <p class="main-photo__gallery__count">Нравится:</p>
+          </li>
+
+          <li class="main-photo__gallery__item">
+            <img src="https://via.placeholder.com/280x180">
+            <h3 class="main-photo__gallery__autor">Борис</h3>
+            <p class="main-photo__gallery__post">Здесь могла быть ваша цитата о высоком и вечном.</p>
+            <button class="main-photo__gallery__like" type="button"><span class="visually-hidden">Сердечко</span></button>
+            <p class="main-photo__gallery__count">Нравится:</p>
+          </li>
+
+          <li class="main-photo__gallery__item">
+            <img src="https://via.placeholder.com/280x180">
+            <h3 class="main-photo__gallery__autor">Сергей</h3>
+            <p class="main-photo__gallery__post">Самая кубанская в мире!</p>
+            <button class="main-photo__gallery__like" type="button"><span class="visually-hidden">Сердечко</span></button>
+            <p class="main-photo__gallery__count">Нравится:</p>
+          </li>
+
+          <li class="main-photo__gallery__item">
+            <img src="https://via.placeholder.com/280x180">
+            <h3 class="main-photo__gallery__autor">Максим</h3>
+            <p class="main-photo__gallery__post">Где снег-то?</p>
+            <button class="main-photo__gallery__like" type="button"><span class="visually-hidden">Сердечко</span></button>
+            <p class="main-photo__gallery__count">Нравится:</p>
+          </li>
+
+          <li class="main-photo__gallery__item">
+            <img src="https://via.placeholder.com/280x180">
+            <h3 class="main-photo__gallery__autor">Надежда</h3>
+            <p class="main-photo__gallery__post">Всем GM и взаимные лайки!</p>
+            <button class="main-photo__gallery__like" type="button"><span class="visually-hidden">Сердечко</span></button>
+            <p class="main-photo__gallery__count">Нравится:</p>
+          </li>
+        </ul>
+
+      </section>
+
+      <section  class="main-photo__new-post">
+        <h2 class="visually-hidden">Новый пост!</h2>
+      </section>
 
     </main>
 
