--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
               <a>Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фотографии</a>
+              <a href="photo.html">Фотографии</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Конкурс</a>
+              <a href="form.html">Конкурс</a>
             </li>
             <li class="site-list__item">
               <a href="#">Html Academy</a>
@@ -34,16 +34,14 @@
       <h1 class="visually-hidden">Пинк – приложение для телефона</h1>
       <section class="download">
         <h2 class="visually-hidden">Загрузка приложения</h2>
-        <p class="page-main__paragraf">Взгляните на жизнь иначе!</p>
-        <div class="page-main__item-download">
-          <a class="page-main__item-button button" href="#">Скачать приложение</a>
-          <ul class="page-main__item__icon">
-            <li class="page-main__item__icon--ios"><span class="visually-hidden">Иконка ios</span></li>
-            <li class="page-main__item__icon--android"><span class="visually-hidden">Иконка Android</span></li>
-            <li class="page-main__item__icon--windows"><span class="visually-hidden">Иконка Windows</span></li>
-          </ul>
-          <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-        </div>
+        <p class="download__paragraf">Взгляните на жизнь иначе!</p>
+        <a class="download__button button" href="#">Скачать приложение</a>
+        <ul class="download__icon icon-list">
+          <li class="download__icon download__icon--ios"><span class="visually-hidden">Иконка ios</span></li>
+          <li class="download__icon download__icon--android"><span class="visually-hidden">Иконка Android</span></li>
+          <li class="download__icon download__icon--windows"><span class="visually-hidden">Иконка Windows</span></li>
+        </ul>
+        <p class="download__access">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </section>
 
       <section class="advantages">
@@ -121,18 +119,20 @@
       <section class="contacts">
         <div class="contacts__wrapper">
           <p class="contacts__manifest">Остались вопросы? Свяжитесь с нами!</p>
-          <div class="contacts__item">
-            <p class="contacts__name">Звоните:</p>
-            <a class="contacts__item" href="tel:+7812555-66-66">+7 (812) 555-66-66</a>
-          </div>
-          <div class="contacts__item">
-            <p class="contacts__name">Пишите:</p>
-            <a class="contacts__item" href="e-mail:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </div>
-          <div class="contacts__item">
-            <p class="contacts__name">Приезжайте в гости:</p>
-            <p class="contacts__item">ул. Большая конюшенная, 19/8</p>
-          </div>
+          <ul class="contacts__addres">
+            <li class="contacts__content">
+              <p class="contacts__name">Звоните:</p>
+              <a class="contacts__item" href="tel:+7812555-66-66">+7 (812) 555-66-66</a>
+            </li>
+            <li class="contacts__content">
+              <p class="contacts__name">Пишите:</p>
+              <a class="contacts__item" href="e-mail:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </li>
+            <li class="contacts__content">
+              <p class="contacts__name">Приезжайте в гости:</p>
+              <p class="contacts__item">ул. Большая конюшенная, 19/8</p>
+            </li>
+          </ul>
           <div class="contacts__map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1680.6059930518893!2d30.321269608937822!3d59.93896839959574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1585410296204!5m2!1sru!2sru" width="400" height="300" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
