--- a/form.html
+++ b/form.html
@@ -30,7 +30,45 @@
       </nav>
     </header>
     <main class="main-form">
+      <div class="form__wrapper">
+        <form class="form__user user__list" action="index.html" method="post">
+          <fieldset class="form__personal personal">
+            <legend class="visually-hidden">Персональные данные</legend>
+            <label for="surname">Фамилия:</label>
+            <input class="personal__surname" type="text" id="surname" name="surname" placeholder="Укажите фамилию*">
 
+            <label for="name">Имя:</label>
+            <input class="personal__name" type="text" id="name" name="name" placeholder="Введите ваше имя*">
+
+            <label for="middle-name">Отчество:</label>
+            <input class="personal__middle-name" type="text" id="middle-name" name="middle-name" placeholder="Ну и отчество тоже">
+          </fieldset>
+
+          <fieldset class="form__progress progress">
+            <legend class="progress__legend">Ваши безбашенные достежения в путешествии</legend>
+            <input class="progress__btn btn" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
+            <label class="progress__mark mark" for="selfie-shark">Сделал селфи с акулой</label>
+
+            <input class="progress__btn btn" type="checkbox" name="burn-beach" id="burn-beach" checked>
+            <label class="progress__mark mark" for="burn-beach">Обгорел на пляже</label>
+
+            <input class="progress__btn btn" type="checkbox" name="see-chack" id="see-chack">
+            <label class="progress__mark mark" for="see-chack">Видел Чака Норриса</label>
+
+            <input class="progress__btn btn" type="checkbox" name="souvenir" id="souvenir">
+            <label class="progress__mark mark" for="souvenir">Накупил сувениров</label>
+
+            <input class="progress__btn btn" type="checkbox" name="tower" id="tower" checked>
+            <label class="progress__mark mark" for="tower">Удержал башню</label>
+
+            <input class="progress__btn btn" type="checkbox" name="smash" id="smash">
+            <label class="progress__mark mark" for="smash">Разгромил отель</label>
+
+            <input class="progress__btn btn" type="checkbox" name="smash" id="smash">
+            <label class="progress__mark mark" for="smash">Разгромил отель</label>
+          </fieldset>
+        </form>
+      </div>
     </main>
 
     <footer class="page-footer">
@@ -38,29 +76,35 @@
         <a class="page-footer__logo">
           <!-- Логотип -->
         </a>
-        <ul class="page-footer__social">
-          <li class="page-footer__social-twitter"></li>
-          <li class="page-footer__social-facebook"></li>
-          <li class="page-footer__social-youtube"></li>
+        <ul class="page-footer__social social">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="#"><span class="visually-hidden">Твиттер</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a>
+          </li>
         </ul>
-        <div class="page-footer__autor">
-          <p class="page-footer__paragraf">Разработано</p>
-          <a class="page-footer__logo" href="#"></a>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright__paragraf">Разработано</p>
+          <a class="copyright__logo" href="#"></a>
         </div>
       </div>
     </footer>
 
-    <section class="failure-popup--good">
-      <h3 class="failure-popup__title">Ваша заявка отправлена</h3>
+    <section class="failure-popup failure-popup--good">
+      <h2 class="failure-popup__title">Ваша заявка отправлена</h2>
       <p class="failure-popup__message">Спасибо за ваше участие, ваша заявка уже поступила к нам.
         В ближайшее время мы рассмотрим её и оповестим вас.</p>
-      <button class="failure-popup__button" type="button" name="button">Закрыть окно</button>
+      <button class="failure-popup__button button" type="button" name="button">Закрыть окно</button>
     </section>
 
-    <section class="failure-popup--error">
+    <section class="failure-popup failure-popup--error">
       <h3 class="failure-popup__title">Что-то пошло не так!</h3>
       <p class="failure-popup__message">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="failure-popup__button" type="button" name="button">Ок</button>
+      <button class="failure-popup__button button" type="button" name="button">Ок</button>
     </section>
   </body>
 </html>
