--- a/index.html
+++ b/index.html
@@ -145,14 +145,20 @@
         <a class="page-footer__logo">
           <!-- Логотип -->
         </a>
-        <ul class="page-footer__social">
-          <li class="page-footer__social-twitter"></li>
-          <li class="page-footer__social-facebook"></li>
-          <li class="page-footer__social-youtube"></li>
+        <ul class="page-footer__social social">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="#"><span class="visually-hidden">Твиттер</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Фейсбук</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a>
+          </li>
         </ul>
-        <div class="page-footer__autor">
-          <p class="page-footer__paragraf">Разработано</p>
-          <a class="page-footer__logo" href="#"></a>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright__paragraf">Разработано</p>
+          <a class="copyright__logo" href="#"></a>
         </div>
       </div>
     </footer>
