--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк, главная страница</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -53,51 +54,72 @@
 
           <fieldset class="form__progress progress">
             <legend class="progress__title">Ваши безбашенные достежения в путешествии</legend>
-            <input class="progress__btn btn" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
-            <label class="progress__mark mark" for="selfie-shark">Сделал селфи с акулой</label>
 
-            <input class="progress__btn btn" type="checkbox" name="burn-beach" id="burn-beach" checked>
-            <label class="progress__mark mark" for="burn-beach">Обгорел на пляже</label>
+            <p class="progress__wrapper">
+              <input class="progress__btn btn" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
+              <label class="progress__mark mark" for="selfie-shark">Сделал селфи с акулой</label>
+            </p>
 
-            <input class="progress__btn btn" type="checkbox" name="see-chack" id="see-chack">
-            <label class="progress__mark mark" for="see-chack">Видел Чака Норриса</label>
+            <p class="progress__wrapper">
+              <input class="progress__btn btn" type="checkbox" name="burn-beach" id="burn-beach" checked>
+              <label class="progress__mark mark" for="burn-beach">Обгорел на пляже</label>
+            </p>
 
-            <input class="progress__btn btn" type="checkbox" name="souvenir" id="souvenir">
-            <label class="progress__mark mark" for="souvenir">Накупил сувениров</label>
+            <p class="progress__wrapper">
+              <input class="progress__btn btn" type="checkbox" name="see-chack" id="see-chack">
+              <label class="progress__mark mark" for="see-chack">Видел Чака Норриса</label>
+            </p>
 
-            <input class="progress__btn btn" type="checkbox" name="tower" id="tower" checked>
-            <label class="progress__mark mark" for="tower">Удержал башню</label>
+            <p class="progress__wrapper">
+              <input class="progress__btn btn" type="checkbox" name="souvenir" id="souvenir">
+              <label class="progress__mark mark" for="souvenir">Накупил сувениров</label>
+            </p>
 
-            <input class="progress__btn btn" type="checkbox" name="smash" id="smash">
-            <label class="progress__mark mark" for="smash">Разгромил отель</label>
+            <p class="progress__wrapper">
+              <input class="progress__btn btn" type="checkbox" name="tower" id="tower" checked>
+              <label class="progress__mark mark" for="tower">Удержал башню</label>
+            </p>
 
-            <input class="progress__btn btn" type="checkbox" name="smash" id="smash">
-            <label class="progress__mark mark" for="smash">Разгромил отель</label>
+            <p class="progress__wrapper">
+              <input class="progress__btn btn" type="checkbox" name="smash" id="smash">
+              <label class="progress__mark mark" for="smash">Разгромил отель</label>
+            </p>
+
+            <p class="progress__wrapper">
+              <input class="progress__btn btn" type="checkbox" name="smash" id="smash">
+              <label class="progress__mark mark" for="smash">Разгромил отель</label>
+            </p>
           </fieldset>
 
           <fieldset class="form__user-contact user-contact">
             <legend class="user-contact__title visually-hidden">Контакты пользователя</legend>
             <p class="user-contact__wrapper">
-            <label for="tel">Номер телефона</label>
-            <input class="user-contact__tel" type="tel" id="tel" name="tel" placeholder="Номер, пожалуйста">
+              <label for="tel">Номер телефона</label>
+              <input class="user-contact__tel" type="tel" id="tel" name="tel" placeholder="Номер, пожалуйста">
             </p>
 
             <p class="user-contact__wrapper">
-            <label for="email">Номер телефона</label>
-            <input class="user-contact__email" type="email" id="email" name="email" placeholder="Введите почту*" required>
+              <label for="email">Номер телефона</label>
+              <input class="user-contact__email" type="email" id="email" name="email" placeholder="Введите почту*" required>
             </p>
           </fieldset>
 
           <fieldset class="form__app app">
             <legend>С каким приложением путешествовали?</legend>
-            <input class="btn" type="radio" name="app" id="app-ios" checked>
-            <label class="app__ios" for="app-ios">Pink для iOS</label>
+            <p class="app__wrapper">
+              <input class="btn" type="radio" name="app" id="app-ios" checked>
+              <label class="app__ios" for="app-ios">Pink для iOS</label>
+            </p>
 
-            <input class="btn" type="radio" name="app" id="app-android">
-            <label class="app__android" for="app-android">Pink на Android</label>
+            <p class="app__wrapper">
+              <input class="btn" type="radio" name="app" id="app-android">
+              <label class="app__android" for="app-android">Pink на Android</label>
+            </p>
 
-            <input class="btn" type="radio" name="app" id="app-windows">
-            <label class="app__windows" for="app-windows">Windows Phone</label>
+            <p class="app__wrapper">
+              <input class="btn" type="radio" name="app" id="app-windows">
+              <label class="app__windows" for="app-windows">Windows Phone</label>
+            </p>
           </fieldset>
 
           <fieldset class="form__post post">
