--- a/source/photo.html
+++ b/source/photo.html
@@ -17,7 +17,7 @@
           </g>
         </svg>
       </a>
-      <nav class="main-nav main-nav--opened">
+      <nav class="main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
