--- a/source/form.html
+++ b/source/form.html
@@ -8,14 +8,11 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo">
-        <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
-          <g>
-            <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
-            <path fill="#FFFFFF" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z"/>
-            <path fill="#FFFFFF" d="M30.87,1.32c0-0.676,0.579-1.256,1.256-1.256h0.354c0.58,0,0.934,0.29,1.288,0.74l13.684,17.45V1.256 C47.451,0.58,47.998,0,48.707,0c0.676,0,1.223,0.58,1.223,1.256v20.348c0,0.676-0.482,1.191-1.158,1.191h-0.129 c-0.548,0-0.934-0.322-1.32-0.772L33.349,4.153v17.45c0,0.676-0.547,1.256-1.255,1.256c-0.677,0-1.224-0.58-1.224-1.256V1.32z"/>
-            <path fill="#FFFFFF" d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z"/>
-          </g>
-        </svg>
+        <picture>
+          <source media="(min-width: 960px)" srcset="../img/logo-pink-white-desktop.svg">
+          <source media="(min-width: 660px)" srcset="../img/logo-pink-white-tablet.svg">
+          <img class="page-header__logo-image" src="../img/logo-pink-white-mobile.svg" widht="74.426" height="22.859" alt="Логотип Пинк">
+        </picture>
       </a>
       <nav class="main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -47,51 +44,51 @@
 
             <p class="personal__wrapper">
               <label for="surname">Фамилия:</label>
-              <input class="personal__surname" type="text" id="surname" name="surname" placeholder="Укажите фамилию*" required>
+              <input class="personal__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию*" required>
             </p>
 
             <p class="personal__wrapper">
               <label for="name">Имя:</label>
-              <input class="personal__name" type="text" id="name" name="name" placeholder="Введите ваше имя*" required>
+              <input class="personal__input" type="text" id="name" name="name" placeholder="Введите ваше имя*" required>
             </p>
 
             <p class="personal__wrapper">
               <label for="middle-name">Отчество:</label>
-              <input class="personal__middle-name" type="text" id="middle-name" name="middle-name" placeholder="Ну и отчество тоже">
+              <input class="personal__input" type="text" id="middle-name" name="middle-name" placeholder="Ну и отчество тоже">
             </p>
           </fieldset>
 
-          <fieldset class="form__progress progress">
+          <fieldset class="form__progress">
             <p class="progress__title">Ваши безбашенные<br> достежения в путешествии</p>
 
             <p class="progress__wrapper">
-              <input class="progress__btn btn-1" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
-              <label class="progress__mark mark" for="selfie-shark">Сделал селфи с акулой</label>
+              <input class="progress__btn visually-hidden" type="checkbox" name="selfie-shark" id="selfie-shark" checked>
+              <label class="progress__mark" for="selfie-shark">Сделал селфи с акулой</label>
             </p>
 
             <p class="progress__wrapper">
-              <input class="progress__btn btn-2" type="checkbox" name="burn-beach" id="burn-beach" checked>
-              <label class="progress__mark mark" for="burn-beach">Обгорел на пляже</label>
+              <input class="progress__btn visually-hidden" type="checkbox" name="burn-beach" id="burn-beach" checked>
+              <label class="progress__mark" for="burn-beach">Обгорел на пляже</label>
             </p>
 
             <p class="progress__wrapper">
-              <input class="progress__btn btn-3" type="checkbox" name="see-chack" id="see-chack">
-              <label class="progress__mark mark" for="see-chack">Видел Чака Норриса</label>
+              <input class="progress__btn visually-hidden" type="checkbox" name="see-chack" id="see-chack">
+              <label class="progress__mark" for="see-chack">Видел Чака Норриса</label>
             </p>
 
             <p class="progress__wrapper">
-              <input class="progress__btn btn-4" type="checkbox" name="souvenir" id="souvenir">
-              <label class="progress__mark mark" for="souvenir">Накупил сувениров</label>
+              <input class="progress__btn visually-hidden" type="checkbox" name="souvenir" id="souvenir">
+              <label class="progress__mark" for="souvenir">Накупил сувениров</label>
             </p>
 
             <p class="progress__wrapper">
-              <input class="progress__btn btn-5" type="checkbox" name="tower" id="tower" checked>
-              <label class="progress__mark mark" for="tower">Удержал башню</label>
+              <input class="progress__btn visually-hidden" type="checkbox" name="tower" id="tower" checked>
+              <label class="progress__mark" for="tower">Удержал башню</label>
             </p>
 
             <p class="progress__wrapper">
-              <input class="progress__btn btn" type="checkbox" name="smash" id="smash">
-              <label class="progress__mark mark" for="smash">Разгромил отель</label>
+              <input class="progress__btn visually-hidden" type="checkbox" name="smash" id="smash">
+              <label class="progress__mark" for="smash">Разгромил отель</label>
             </p>
 
           </fieldset>
