--- a/source/index.html
+++ b/source/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <title>HTML Academy: Пинк, главная страница</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo">
         <picture>
-          <source media="(min-width: 960px)" srcset="../img/logo-pink-white-desktop.svg">
-          <source media="(min-width: 660px)" srcset="../img/logo-pink-white-tablet.svg">
-          <img class="page-header__logo-image" src="../img/logo-pink-white-mobile.svg" widht="74.426" height="22.859" alt="Логотип Пинк">
+          <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
+          <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" widht="74.426" height="22.859" alt="Логотип Пинк">
         </picture>
       <!--  <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
           <g>
@@ -50,9 +51,9 @@
         <p class="download__paragraf">Взгляните на жизнь иначе!</p>
         <a class="download__button button" href="#">Скачать приложение</a>
         <ul class="download__icon icon-list">
-          <li class="icon-list icon-list--ios"><span class="visually-hidden">Иконка ios</span></li>
-          <li class="icon-list icon-list--android"><span class="visually-hidden">Иконка Android</span></li>
-          <li class="icon-list icon-list--windows"><span class="visually-hidden">Иконка Windows</span></li>
+          <li class="icon-list__item icon-list--ios"><span class="visually-hidden">Иконка ios</span></li>
+          <li class="icon-list__item icon-list--android"><span class="visually-hidden">Иконка Android</span></li>
+          <li class="icon-list__item icon-list--windows"><span class="visually-hidden">Иконка Windows</span></li>
         </ul>
         <p class="download__access">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </section>
