Начинаем вёрстку с препроцессором

--- a/source/index.html
+++ b/source/index.html
@@ -70,13 +70,18 @@
             </li>
             <li class="advantages__item">
               <h3 class="advantages__title">Меняет мир вокруг</h3>
-              <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эфект</p>
+              <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br> усилить эфект</p>
             </li>
             <li class="advantages__item">
               <h3 class="advantages__title">Заводит новых друзей</h3>
               <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
+        </div>
+        <div class="advantages__timer">
+          <h3 class="advantages__timer__title">Эффект<br> на 24 часа!</h3>
+          <p class="advantages__timer__paragraf">Британские учёные провели исследования и доказали, что положительный эффект<br> от использования приложения длится целые сутки!</p>
+          <a class="advantages__timer__know" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
 
